<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ru.tinkoff.school.activitylecture.MainActivity"
    android:gravity="center">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/introduction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/introduce_yourself"
            android:textAlignment="center"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/find_out_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find_out"/>

    <Button
        android:id="@+id/famous_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/become_famous"/>
</LinearLayout>
